[package]
name = "pw"
version = "0.1.0"
authors = ["Oliver Jensen <ojensen5115@gmail.com>"]

[dependencies.rusqlite]
version = "0.11.0"
features = ["bundled"]

[dependencies]
docopt = "0.8"
rustyline = "1.0.0"
clipboard = "0.3.0"
#time = "0.1.37"
serde = "1.0"        # for rusqlite
serde_derive = "1.0" # for rusqlite