[package]
name = "pw"
version = "0.1.1"
authors = ["Oliver Jensen <ojensen5115@gmail.com>"]

[dependencies.rusqlite]
version = "0.11.0"
features = ["bundled"]

[dependencies]
docopt = "0.8"       # for parsing commands / arguments
rust-ini = "0.9"     # for parsing our configuration file
rustyline = "1.0.0"  # for getting user input
clipboard = "0.3.0"  # for copying usernames / passwords
serde = "1.0"        # for rusqlite
serde_derive = "1.0" # for rusqlite
serde_json = "1.0"   # for keybase verification
rand = "0.3.15"      # for password generation
